使用 Colaboratory 建立

--- a/HW4/HW_4.ipynb
+++ b/HW4/HW_4.ipynb
@@ -37,7 +37,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1860c43c-2639-4eaa-b383-44c883ab8fb1"
+        "outputId": "2466f401-8f46-43ab-90f5-88113057ebd6"
       },
       "outputs": [
         {
@@ -76,36 +76,36 @@
           "base_uri": "https://localhost:8080/",
           "height": 290,
           "referenced_widgets": [
-            "3274bb2c703a41dab105549eda51811e",
-            "9e2dc05c480d4ed49cffbc802fb9a6b5",
-            "4f66f2e7d43443f5bb12bde0a9f205a4",
-            "f236cd233dd64138a6bb4fde889f0ff1",
-            "0061aa84bb834d55aba072e4bf97136b",
-            "c2a6405e20824278810577bfc5bc6862",
-            "5064f42abb394b02bb74b67ef284b6ed",
-            "7d1aecb77d00455bbb8b4f77888848c4",
-            "92aefd8a16014f80a6833d23a160b51b",
-            "e0cb9f415aef40ba8e109b92173e13a5",
-            "79eeac63b4f74e6ba184a47d7867d712"
+            "0fc311af1bc745d79ebb7ba72d4c3202",
+            "41925e2058a648b09610ccc447973f89",
+            "de9766658855437fa0af9bda31020fed",
+            "0aa6f5acc5d545268fdd103946278be7",
+            "98542cebd7db47d083ad040a7f1345f4",
+            "424faf13f66f465ebf9e16b6cceaa093",
+            "8cb2a92e0af044139ca4d44b571b0e8f",
+            "84a52a6f97874b51ab162084ead29ff1",
+            "7427f79adc454881a978bce25181e1c4",
+            "b032ffb0b64e4c5fab8397b856c6f507",
+            "6822c86114fb45fdbe296ceeb7a8e359"
           ]
         },
-        "outputId": "5f57c62f-bfff-406c-ea56-161108a96bd7"
+        "outputId": "648e249c-3372-4ed3-8c15-27324c90d473"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2022-02-15 11:19:07--  https://raw.githubusercontent.com/dbamman/nlp22/main/HW4/plot_summaries.txt\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.110.133, 185.199.109.133, ...\n",
+            "--2022-02-16 04:58:10--  https://raw.githubusercontent.com/dbamman/nlp22/main/HW4/plot_summaries.txt\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 75934033 (72M) [text/plain]\n",
             "Saving to: ‘plot_summaries.txt’\n",
             "\n",
-            "plot_summaries.txt  100%[===================>]  72.42M  88.2MB/s    in 0.8s    \n",
+            "plot_summaries.txt  100%[===================>]  72.42M   124MB/s    in 0.6s    \n",
             "\n",
-            "2022-02-15 11:19:08 (88.2 MB/s) - ‘plot_summaries.txt’ saved [75934033/75934033]\n",
+            "2022-02-16 04:58:10 (124 MB/s) - ‘plot_summaries.txt’ saved [75934033/75934033]\n",
             "\n"
           ]
         },
@@ -113,7 +113,7 @@
           "output_type": "display_data",
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "3274bb2c703a41dab105549eda51811e",
+              "model_id": "0fc311af1bc745d79ebb7ba72d4c3202",
               "version_minor": 0,
               "version_major": 2
             },
@@ -196,7 +196,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZS4og6Yp2Avb",
-        "outputId": "1a0daf40-2a7f-4165-f716-bc355b303521"
+        "outputId": "50af5ecc-f6cb-46cf-a014-4e9afda251d2"
       },
       "outputs": [
         {
@@ -231,7 +231,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 8,
       "metadata": {
         "id": "0xJjoXN_F-s0"
       },
@@ -276,7 +276,9 @@
         "        assert len(text) >= self.n, f\"Expected at least {self.n} words; got {len(text)} words. \\nGiven text: {text}\"\n",
         "\n",
         "        # BEGIN SOLUTION\n",
-        "        return (self.counts_n + self.smoothing)/(self.counts_n_1 + self.smoothing * len(self.vocab))\n",
+        "        n_gram = ' '.join(text)\n",
+        "        n_1_gram = ' '.join(text[:-1])\n",
+        "        return (self.counts_n[n_gram] + self.smoothing)/(self.counts_n_1[n_1_gram] + self.smoothing * len(self.vocab))\n",
         "        # END SOLUTION\n",
         "\n",
         "    def get_next_word_probabilities(self, text_prefix):\n",
@@ -325,22 +327,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 13,
       "metadata": {
         "id": "Qz99lOhKEPgT",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "90e91c9f-073f-495f-a587-7da4fc88f237"
+        "outputId": "c7c0d1f0-9d18-4b7b-c69d-4492c2c32a29"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "unigram validation perplexity: None\n",
-            "bigram validation perplexity: None\n",
-            "trigram validation perplexity: None\n"
+            "unigram validation perplexity: 1339.1979815063446\n",
+            "bigram validation perplexity: 805.0404106590535\n",
+            "trigram validation perplexity: 5123.0222464306\n"
           ]
         }
       ],
@@ -358,7 +360,14 @@
         "        - you want to get the probability of each increasing sequence of words\n",
         "    \"\"\"\n",
         "    # BEGIN SOLUTION\n",
+        "    curr = [\"<eos>\"] * (model.n - 1) \n",
+        "    prob = 0\n",
+        "    for i in range(len(text)):\n",
+        "      curr.append(text[i])\n",
+        "      prob += - np.log(model.get_probability(curr))\n",
+        "      curr.pop(0)\n",
         "    \n",
+        "    return np.exp(1/len(text) * prob)\n",
         "    \n",
         "    # END SOLUTION\n",
         "\n",
@@ -739,7 +748,7 @@
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
-        "3274bb2c703a41dab105549eda51811e": {
+        "0fc311af1bc745d79ebb7ba72d4c3202": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HBoxModel",
           "model_module_version": "1.5.0",
@@ -752,16 +761,16 @@
             "_view_count": null,
             "_view_module_version": "1.5.0",
             "box_style": "",
-            "layout": "IPY_MODEL_9e2dc05c480d4ed49cffbc802fb9a6b5",
+            "layout": "IPY_MODEL_41925e2058a648b09610ccc447973f89",
             "_model_module": "@jupyter-widgets/controls",
             "children": [
-              "IPY_MODEL_4f66f2e7d43443f5bb12bde0a9f205a4",
-              "IPY_MODEL_f236cd233dd64138a6bb4fde889f0ff1",
-              "IPY_MODEL_0061aa84bb834d55aba072e4bf97136b"
+              "IPY_MODEL_de9766658855437fa0af9bda31020fed",
+              "IPY_MODEL_0aa6f5acc5d545268fdd103946278be7",
+              "IPY_MODEL_98542cebd7db47d083ad040a7f1345f4"
             ]
           }
         },
-        "9e2dc05c480d4ed49cffbc802fb9a6b5": {
+        "41925e2058a648b09610ccc447973f89": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -813,13 +822,13 @@
             "left": null
           }
         },
-        "4f66f2e7d43443f5bb12bde0a9f205a4": {
+        "de9766658855437fa0af9bda31020fed": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
           "state": {
             "_view_name": "HTMLView",
-            "style": "IPY_MODEL_c2a6405e20824278810577bfc5bc6862",
+            "style": "IPY_MODEL_424faf13f66f465ebf9e16b6cceaa093",
             "_dom_classes": [],
             "description": "",
             "_model_name": "HTMLModel",
@@ -831,16 +840,16 @@
             "_view_module_version": "1.5.0",
             "description_tooltip": null,
             "_model_module": "@jupyter-widgets/controls",
-            "layout": "IPY_MODEL_5064f42abb394b02bb74b67ef284b6ed"
+            "layout": "IPY_MODEL_8cb2a92e0af044139ca4d44b571b0e8f"
           }
         },
-        "f236cd233dd64138a6bb4fde889f0ff1": {
+        "0aa6f5acc5d545268fdd103946278be7": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "FloatProgressModel",
           "model_module_version": "1.5.0",
           "state": {
             "_view_name": "ProgressView",
-            "style": "IPY_MODEL_7d1aecb77d00455bbb8b4f77888848c4",
+            "style": "IPY_MODEL_84a52a6f97874b51ab162084ead29ff1",
             "_dom_classes": [],
             "description": "",
             "_model_name": "FloatProgressModel",
@@ -855,31 +864,31 @@
             "min": 0,
             "description_tooltip": null,
             "_model_module": "@jupyter-widgets/controls",
-            "layout": "IPY_MODEL_92aefd8a16014f80a6833d23a160b51b"
+            "layout": "IPY_MODEL_7427f79adc454881a978bce25181e1c4"
           }
         },
-        "0061aa84bb834d55aba072e4bf97136b": {
+        "98542cebd7db47d083ad040a7f1345f4": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
           "state": {
             "_view_name": "HTMLView",
-            "style": "IPY_MODEL_e0cb9f415aef40ba8e109b92173e13a5",
+            "style": "IPY_MODEL_b032ffb0b64e4c5fab8397b856c6f507",
             "_dom_classes": [],
             "description": "",
             "_model_name": "HTMLModel",
             "placeholder": "​",
             "_view_module": "@jupyter-widgets/controls",
             "_model_module_version": "1.5.0",
-            "value": " 42303/42303 [02:26&lt;00:00, 333.76it/s]",
+            "value": " 42303/42303 [02:16&lt;00:00, 370.76it/s]",
             "_view_count": null,
             "_view_module_version": "1.5.0",
             "description_tooltip": null,
             "_model_module": "@jupyter-widgets/controls",
-            "layout": "IPY_MODEL_79eeac63b4f74e6ba184a47d7867d712"
+            "layout": "IPY_MODEL_6822c86114fb45fdbe296ceeb7a8e359"
           }
         },
-        "c2a6405e20824278810577bfc5bc6862": {
+        "424faf13f66f465ebf9e16b6cceaa093": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -894,7 +903,7 @@
             "_model_module": "@jupyter-widgets/controls"
           }
         },
-        "5064f42abb394b02bb74b67ef284b6ed": {
+        "8cb2a92e0af044139ca4d44b571b0e8f": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -946,7 +955,7 @@
             "left": null
           }
         },
-        "7d1aecb77d00455bbb8b4f77888848c4": {
+        "84a52a6f97874b51ab162084ead29ff1": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ProgressStyleModel",
           "model_module_version": "1.5.0",
@@ -962,7 +971,7 @@
             "_model_module": "@jupyter-widgets/controls"
           }
         },
-        "92aefd8a16014f80a6833d23a160b51b": {
+        "7427f79adc454881a978bce25181e1c4": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -1014,7 +1023,7 @@
             "left": null
           }
         },
-        "e0cb9f415aef40ba8e109b92173e13a5": {
+        "b032ffb0b64e4c5fab8397b856c6f507": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -1029,7 +1038,7 @@
             "_model_module": "@jupyter-widgets/controls"
           }
         },
-        "79eeac63b4f74e6ba184a47d7867d712": {
+        "6822c86114fb45fdbe296ceeb7a8e359": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
