使用 Colaboratory 建立

--- a/HW4/HW_4.ipynb
+++ b/HW4/HW_4.ipynb
@@ -34,10 +34,10 @@
       "execution_count": 49,
       "metadata": {
         "id": "xJy9Ar2YFz6h",
-        "outputId": "7f406a0a-4bb6-4e01-cb84-6aa7b68e443d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7f406a0a-4bb6-4e01-cb84-6aa7b68e443d"
       },
       "outputs": [
         {
@@ -72,7 +72,6 @@
       "execution_count": 50,
       "metadata": {
         "id": "EDW95kiEPWim",
-        "outputId": "ae992bff-8757-401e-cea8-26ca4b8c6f79",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 290,
@@ -89,7 +88,8 @@
             "cbb9d07a388c419bb98dc05b96a07cbb",
             "05337820dd1b49b3ad62b710ffe322ee"
           ]
-        }
+        },
+        "outputId": "ae992bff-8757-401e-cea8-26ca4b8c6f79"
       },
       "outputs": [
         {
@@ -192,11 +192,11 @@
       "cell_type": "code",
       "execution_count": 53,
       "metadata": {
-        "id": "74wPdj8VGtOB",
-        "outputId": "26ed7c4f-a429-451b-c138-6b4c964bd633",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "74wPdj8VGtOB",
+        "outputId": "26ed7c4f-a429-451b-c138-6b4c964bd633"
       },
       "outputs": [
         {
@@ -333,10 +333,10 @@
       "execution_count": 60,
       "metadata": {
         "id": "Qz99lOhKEPgT",
-        "outputId": "f2fd2211-732d-4123-e19c-58fce7a53273",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f2fd2211-732d-4123-e19c-58fce7a53273"
       },
       "outputs": [
         {
@@ -400,13 +400,18 @@
         "id": "2i7Cgt1SgVbN"
       },
       "source": [
-        "<!-- Do not remove this comment, it is used by the autograder: RqYJKsoTS6 -->\n",
+        "<!-- Do not remove this comment, it is used by the \n",
         "\n",
-        "Unigram validation perplexity: ***Your Answer Here***\n",
+        "1.   清單項目\n",
+        "2.   清單項目\n",
         "\n",
-        "Bigram validation perplexity: ***Your Answer Here***\n",
+        "autograder: RqYJKsoTS6 -->\n",
         "\n",
-        "Trigram validation perplexity: ***Your Answer Here***"
+        "Unigram validation perplexity: ***1339.1979815063446***\n",
+        "\n",
+        "Bigram validation perplexity: ***805.0404106590535***\n",
+        "\n",
+        "Trigram validation perplexity: ***5123.0222464306***"
       ]
     },
     {
@@ -476,10 +481,10 @@
       "execution_count": 65,
       "metadata": {
         "id": "UK0ZF-gfcUOS",
-        "outputId": "5a03ef52-c7c6-4138-e2a6-812a71bff798",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5a03ef52-c7c6-4138-e2a6-812a71bff798"
       },
       "outputs": [
         {
