使用 Colaboratory 建立

--- a/HW4/HW_4.ipynb
+++ b/HW4/HW_4.ipynb
@@ -34,10 +34,10 @@
       "execution_count": 2,
       "metadata": {
         "id": "xJy9Ar2YFz6h",
-        "outputId": "f2c78746-4e2b-4afb-9e1c-7917c183878e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f2c78746-4e2b-4afb-9e1c-7917c183878e"
       },
       "outputs": [
         {
@@ -72,7 +72,6 @@
       "execution_count": 3,
       "metadata": {
         "id": "EDW95kiEPWim",
-        "outputId": "07fd8586-2750-4803-b8e4-0bede7233632",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 290,
@@ -89,7 +88,8 @@
             "8d88879a86104d8196b65db191d0fa32",
             "654bf632bed548ac9a42b69e3e4607d0"
           ]
-        }
+        },
+        "outputId": "07fd8586-2750-4803-b8e4-0bede7233632"
       },
       "outputs": [
         {
@@ -192,11 +192,11 @@
       "cell_type": "code",
       "execution_count": 8,
       "metadata": {
-        "id": "PtWs4olctcoy",
-        "outputId": "f841d9b6-3da0-43d7-acc2-a936551a5e21",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "PtWs4olctcoy",
+        "outputId": "f841d9b6-3da0-43d7-acc2-a936551a5e21"
       },
       "outputs": [
         {
@@ -231,7 +231,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 326,
+      "execution_count": 334,
       "metadata": {
         "id": "0xJjoXN_F-s0"
       },
@@ -298,7 +298,7 @@
         "            - As a sanity check, you should make sure the probabilities you return add up to 1\n",
         "        \"\"\"\n",
         "        # BEGIN SOLUTION\n",
-        "        # print(self.vocab.itos)\n",
+        "        # print(len(self.vocab.itos)) = 57663\n",
         "        while len(text_prefix) < self.n - 1:\n",
         "          text_prefix = [\"<eos>\"] + text_prefix\n",
         "        if len(text_prefix) > self.n - 1:\n",
@@ -332,13 +332,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 327,
+      "execution_count": 335,
       "metadata": {
         "id": "Qz99lOhKEPgT",
-        "outputId": "2db9c4f6-d5ac-4fde-f302-01c661e45253",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "40dea05b-d3fb-497e-8cec-4ec39bdca6fb"
       },
       "outputs": [
         {
@@ -419,7 +419,7 @@
       "source": [
         "Question: Why does the trigram model have such a high perplexity?\n",
         "\n",
-        "Answer: ***One reason why the trigram model have a higher preplexity than both unigram and bigram is that our trigram model has very small probability for***"
+        "Answer: ***One reason why the trigram model has a higher preplexity than both unigram and bigram is that our trigram model generate very small probability (zero or very close to zero) for each possible trigram, which makes the perplexity very high because perplexity is the inverse probability. Also, we trained our model on twenty thousand words using a 57663 word vocabulary, which we may not have large enough data to make better predictions with higher order n-gram models. A lot of combinations may remain unseen since our data is too small.***"
       ]
     },
     {
@@ -444,7 +444,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 328,
+      "execution_count": 336,
       "metadata": {
         "id": "tetguEyrHppc"
       },
@@ -479,14 +479,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 329,
+      "execution_count": 337,
       "metadata": {
         "id": "UK0ZF-gfcUOS",
-        "outputId": "308c5a4e-01e4-46fe-90a7-70ffdabb8de9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
-        }
+        },
+        "outputId": "5c985fdd-d2bf-43ae-a18d-3f1537f0b752"
       },
       "outputs": [
         {
@@ -500,7 +500,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 329
+          "execution_count": 337
         }
       ],
       "source": [
@@ -538,7 +538,6 @@
       "execution_count": null,
       "metadata": {
         "id": "WuBVYDScI3w1",
-        "outputId": "e229f1a6-30a9-4d21-bee6-e6d6d79ee356",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68,
@@ -566,7 +565,8 @@
             "d754590b41934eb0ba489fbe6da139e5",
             "c66ff5d91d07462eaf98f4311e20bd53"
           ]
-        }
+        },
+        "outputId": "e229f1a6-30a9-4d21-bee6-e6d6d79ee356"
       },
       "outputs": [
         {
