--- a/HW5/HW_5.ipynb
+++ b/HW5/HW_5.ipynb
@@ -56,9 +56,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d7476042-0113-448a-cc75-154f5e0571c5"
+        "outputId": "92482bd0-9f71-40bd-b86d-6bd95eb7aa0c"
       },
-      "execution_count": 1,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -66,36 +66,36 @@
           "text": [
             "Collecting transformers\n",
             "  Downloading transformers-4.16.2-py3-none-any.whl (3.5 MB)\n",
-            "\u001b[K     |████████████████████████████████| 3.5 MB 30.3 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: filelock in /usr/local/lib/python3.7/dist-packages (from transformers) (3.6.0)\n",
-            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.7/dist-packages (from transformers) (21.3)\n",
+            "\u001b[K     |████████████████████████████████| 3.5 MB 1.1 MB/s \n",
+            "\u001b[?25hCollecting sacremoses\n",
+            "  Downloading sacremoses-0.0.47-py2.py3-none-any.whl (895 kB)\n",
+            "\u001b[K     |████████████████████████████████| 895 kB 15.7 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: numpy>=1.17 in /usr/local/lib/python3.7/dist-packages (from transformers) (1.21.5)\n",
             "Collecting pyyaml>=5.1\n",
             "  Downloading PyYAML-6.0-cp37-cp37m-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_12_x86_64.manylinux2010_x86_64.whl (596 kB)\n",
-            "\u001b[K     |████████████████████████████████| 596 kB 49.2 MB/s \n",
-            "\u001b[?25hCollecting tokenizers!=0.11.3,>=0.10.1\n",
+            "\u001b[K     |████████████████████████████████| 596 kB 58.7 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: regex!=2019.12.17 in /usr/local/lib/python3.7/dist-packages (from transformers) (2019.12.20)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.7/dist-packages (from transformers) (2.23.0)\n",
+            "Collecting tokenizers!=0.11.3,>=0.10.1\n",
             "  Downloading tokenizers-0.11.6-cp37-cp37m-manylinux_2_12_x86_64.manylinux2010_x86_64.whl (6.5 MB)\n",
-            "\u001b[K     |████████████████████████████████| 6.5 MB 58.2 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: tqdm>=4.27 in /usr/local/lib/python3.7/dist-packages (from transformers) (4.62.3)\n",
-            "Requirement already satisfied: regex!=2019.12.17 in /usr/local/lib/python3.7/dist-packages (from transformers) (2019.12.20)\n",
-            "Requirement already satisfied: importlib-metadata in /usr/local/lib/python3.7/dist-packages (from transformers) (4.11.1)\n",
-            "Requirement already satisfied: numpy>=1.17 in /usr/local/lib/python3.7/dist-packages (from transformers) (1.21.5)\n",
-            "Collecting huggingface-hub<1.0,>=0.1.0\n",
+            "\u001b[K     |████████████████████████████████| 6.5 MB 66.3 MB/s \n",
+            "\u001b[?25hCollecting huggingface-hub<1.0,>=0.1.0\n",
             "  Downloading huggingface_hub-0.4.0-py3-none-any.whl (67 kB)\n",
-            "\u001b[K     |████████████████████████████████| 67 kB 6.7 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: requests in /usr/local/lib/python3.7/dist-packages (from transformers) (2.23.0)\n",
-            "Collecting sacremoses\n",
-            "  Downloading sacremoses-0.0.47-py2.py3-none-any.whl (895 kB)\n",
-            "\u001b[K     |████████████████████████████████| 895 kB 62.4 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: typing-extensions>=3.7.4.3 in /usr/local/lib/python3.7/dist-packages (from huggingface-hub<1.0,>=0.1.0->transformers) (3.10.0.2)\n",
+            "\u001b[K     |████████████████████████████████| 67 kB 6.3 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: tqdm>=4.27 in /usr/local/lib/python3.7/dist-packages (from transformers) (4.62.3)\n",
+            "Requirement already satisfied: importlib-metadata in /usr/local/lib/python3.7/dist-packages (from transformers) (4.11.1)\n",
+            "Requirement already satisfied: filelock in /usr/local/lib/python3.7/dist-packages (from transformers) (3.6.0)\n",
+            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.7/dist-packages (from transformers) (21.3)\n",
+            "Requirement already satisfied: typing-extensions>=3.7.4.3 in /usr/local/lib/python3.7/dist-packages (from huggingface-hub<1.0,>=0.1.0->transformers) (3.10.0.2)\n",
             "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /usr/local/lib/python3.7/dist-packages (from packaging>=20.0->transformers) (3.0.7)\n",
             "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.7/dist-packages (from importlib-metadata->transformers) (3.7.0)\n",
             "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests->transformers) (2.10)\n",
-            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests->transformers) (1.24.3)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests->transformers) (2021.10.8)\n",
             "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests->transformers) (3.0.4)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests->transformers) (2021.10.8)\n",
+            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests->transformers) (1.24.3)\n",
+            "Requirement already satisfied: joblib in /usr/local/lib/python3.7/dist-packages (from sacremoses->transformers) (1.1.0)\n",
             "Requirement already satisfied: six in /usr/local/lib/python3.7/dist-packages (from sacremoses->transformers) (1.15.0)\n",
             "Requirement already satisfied: click in /usr/local/lib/python3.7/dist-packages (from sacremoses->transformers) (7.1.2)\n",
-            "Requirement already satisfied: joblib in /usr/local/lib/python3.7/dist-packages (from sacremoses->transformers) (1.1.0)\n",
             "Installing collected packages: pyyaml, tokenizers, sacremoses, huggingface-hub, transformers\n",
             "  Attempting uninstall: pyyaml\n",
             "    Found existing installation: PyYAML 3.13\n",
@@ -108,13 +108,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 38,
       "metadata": {
         "id": "f6ToJtg5zZBV",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cb5dc0fb-3861-4605-b5db-5bc6781136c7"
+        "outputId": "98c31a11-810e-4bfc-86cb-eca47b9961db"
       },
       "outputs": [
         {
@@ -151,9 +151,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4d4b9cab-0125-49eb-d6d5-c81b8fba0942"
+        "outputId": "c93c8cb3-8ca0-484d-89dd-7c73021671e9"
       },
-      "execution_count": 3,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
@@ -984,20 +984,39 @@
         "\t\t\tcat = token_label_list[i].split('-')[1]\n",
         "\t\t\ti += 1\n",
         "\t\t\twhile token_label_list[i].split('-')[0] == 'I':\n",
-        "\t\t\t\ti += 1\n",
         "\t\t\t\tend += 1\n",
+        "\t\t\t\ti += 1\n",
         "\t\t\tspans[(start, end, cat)] = k\n",
         "\t\t\tk += 1\n",
         "\t\telse:\n",
         "\t\t\ti += 1\n",
         "\treturn set(spans)\n",
-        " \t# END SOLUTION"
+        " \t# END SOLUTION\n",
+        "get_spans(['B-PER', 'I-PER', 'O', 'O', 'O', 'O', 'B-ORG'])"
       ],
       "metadata": {
-        "id": "VbGevWPY4g-L"
+        "id": "VbGevWPY4g-L",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 317
+        },
+        "outputId": "d6eea544-9169-4e0a-c289-ceebd759305b"
       },
-      "execution_count": 62,
-      "outputs": []
+      "execution_count": 93,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "IndexError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-93-21d13e19e373>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     35\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mspans\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m         \u001b[0;31m# END SOLUTION\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 37\u001b[0;31m \u001b[0mget_spans\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'B-PER'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'I-PER'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'O'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'O'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'O'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'O'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'B-ORG'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-93-21d13e19e373>\u001b[0m in \u001b[0;36mget_spans\u001b[0;34m(token_label_list)\u001b[0m\n\u001b[1;32m     26\u001b[0m                         \u001b[0mcat\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtoken_label_list\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'-'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m                         \u001b[0mi\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m                         \u001b[0;32mwhile\u001b[0m \u001b[0mtoken_label_list\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'-'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'I'\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mi\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtoken_label_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     29\u001b[0m                                 \u001b[0mend\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m                                 \u001b[0mi\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1047,14 +1066,44 @@
         "\t\"\"\"\n",
         "\n",
         "\t# BEGIN SOLUTION \n",
+        "\tmodel_labels = [x[1] for x in predictions[0]]\n",
+        "\tgold_labels = [x[2] for x in predictions[0]]\n",
+        "\tmodel_spans = get_spans(model_labels)\n",
+        "\t#gold_spans = get_spans(gold_labels)\n",
+        "\t#num_labeled = len(gold_spans)\n",
+        "\t#num_applied = len(model_spans)\n",
+        "\t#tp = len(model_spans.intersection(gold_spans))\n",
+        "\t#r = tp / num_labeled\n",
+        "\t#p = tp / num_applied\n",
+        "\t#f1 = 2 * p * r / (p + r)\n",
+        "\treturn gold_labels\n",
+        "\t# END SOLUTION\n",
         "\n",
-        "\t# END SOLUTION"
+        "predictions = []\n",
+        "predictions.append([('Tim', 'B-PER', 'B-PER'), ('Cook', 'I-PER', 'I-PER'), ('is', 'O', 'O'), ('the', 'O', 'O'), ('CEO', 'O', 'O'), ('of', 'O', 'O'), ('Apple', 'O', 'B-ORG')])\n",
+        "predictions.append([('He', 'O', 'O'), ('started', 'O', 'O'), ('in', 'O', 'O'), ('2011', 'O', 'O')])\n",
+        "get_span_f1(predictions)"
       ],
       "metadata": {
-        "id": "TYK4zPpN4mm8"
+        "id": "TYK4zPpN4mm8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d40ae764-f0e6-44f8-b11c-a6304ee5f1d7"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 84,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['B-PER', 'I-PER', 'O', 'O', 'O', 'O', 'B-ORG']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 84
+        }
+      ]
     },
     {
       "cell_type": "markdown",
