使用 Colaboratory 建立

--- a/HW6/HW6.ipynb
+++ b/HW6/HW6.ipynb
@@ -563,7 +563,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 266,
+      "execution_count": 308,
       "id": "5737fbe2",
       "metadata": {
         "id": "5737fbe2"
@@ -599,7 +599,6 @@
         "      # print(avg_syn.shape)\n",
         "      # print(avg_syn)\n",
         "      list_s.append(avg_syn)\n",
-        "   \n",
         "    \n",
         "    for (word, definition) in urban_dictionary_terms:\n",
         "      definition = definition.lower()\n",
@@ -608,58 +607,66 @@
         "      embeddings = [glove_embeddings[glove_vocab_map[i]] for i in definition]\n",
         "      avg_glove = [np.mean(embeddings, axis = 0)]\n",
         "      # print(avg_glove.shape)\n",
-        "      cosine_similarities = [cosine_similarity(avg_glove, i) for i in avg_syn]\n",
-        "      #print(cosine_similarities)\n",
-        "      #index\n",
-        "      #dic[word] = target_synsets[index]\n",
+        "      cosine_similarities = [cosine_similarity(avg_glove, i)[0] for i in list_s]\n",
+        "      max_cos = max(cosine_similarities)\n",
+        "      for i in np.arange(len(cosine_similarities)):\n",
+        "        if cosine_similarities[i] == max_cos:\n",
+        "          index = i\n",
+        "          dic[word] = target_synsets[index]\n",
         "\n",
         "    return dic"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 267,
+      "execution_count": 309,
       "id": "b69452b2",
       "metadata": {
         "id": "b69452b2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "dd7c9549-8c82-4060-f6d6-4b84b8fb42e3"
+        "outputId": "5a1b2d8a-dd30-4461-8d6b-b9dc78f617b8"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[-0.03815225  0.24764105  0.242235   -0.14679207  0.0746275   0.5062\n",
-            " -0.27453025  0.24313625  0.0361875   0.05035     0.37761     0.005195\n",
-            "  0.236765    0.37070225 -0.10569975 -0.287395   -0.0343465   0.304245\n",
-            " -0.3821505   0.0385845   0.28598775  0.0531505   0.459487    0.01175475\n",
-            "  0.52475295 -0.19044508 -0.3802055  -0.5113975   0.043965   -0.122468\n",
-            " -0.04078375  0.2531325  -0.183856   -0.2371325   0.108486   -0.00882825\n",
-            "  0.1527925  -0.18265775 -0.09368375 -0.0832475  -0.287405   -0.5198025\n",
-            "  0.0768825  -0.29675275 -0.0998625  -0.16493225 -0.1917875  -0.010994\n",
-            " -0.15415884 -0.9142425   0.106747   -0.055565    0.085564    1.29607\n",
-            " -0.06694475 -2.25505     0.04041    -0.0471045   1.780125    0.6649575\n",
-            " -0.04840325  0.7362325  -0.25496025  0.2286425   0.6989175   0.11775825\n",
-            "  0.317795    0.282511    0.19062075 -0.3799975  -0.1334355  -0.17480225\n",
-            " -0.00567125 -0.40112     0.05394625 -0.01397625 -0.1971575  -0.07464\n",
-            " -0.3490155   0.1031285   0.410955   -0.03109025 -0.684365    0.19090975\n",
-            " -1.1647025   0.12867833  0.0449905   0.33943975 -0.07419     0.0308145\n",
-            " -0.2894605   0.0673135  -0.01389    -0.259185   -0.6738375  -0.1578535\n",
-            " -0.10030075 -0.27193625  0.546915   -0.00494825]\n"
+            "0.9377348789927616\n",
+            "0.9236094789017139\n",
+            "0.9414516733375865\n",
+            "0.9176346857816758\n",
+            "0.8799032692506081\n",
+            "0.9222623745614409\n",
+            "0.9229939467069989\n",
+            "0.9388833806225856\n",
+            "0.9131408283596923\n",
+            "0.9302437155155446\n",
+            "0.9505836772559635\n",
+            "0.946468408832777\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "{}"
+              "{'Amotivational': 'kernel.n.03',\n",
+              " 'Crowdfunding': 'spread.n.01',\n",
+              " 'Hellacious': 'formidable.s.01',\n",
+              " 'Hygge': 'stranger.n.02',\n",
+              " 'Infodemic': 'spread.n.01',\n",
+              " 'NSFW': 'stranger.n.02',\n",
+              " 'Onboarding': 'orientation.n.06',\n",
+              " 'Rando': 'stranger.n.02',\n",
+              " 'TL;DR': 'stranger.n.02',\n",
+              " 'Truthiness': 'stranger.n.02',\n",
+              " 'Unfriend': 'stranger.n.02',\n",
+              " 'biohacking': 'kernel.n.03'}"
             ]
           },
           "metadata": {},
-          "execution_count": 267
+          "execution_count": 309
         }
       ],
       "source": [
