使用 Colaboratory 建立

--- a/HW6/HW6.ipynb
+++ b/HW6/HW6.ipynb
@@ -563,7 +563,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 308,
+      "execution_count": 324,
       "id": "5737fbe2",
       "metadata": {
         "id": "5737fbe2"
@@ -607,7 +607,7 @@
         "      embeddings = [glove_embeddings[glove_vocab_map[i]] for i in definition]\n",
         "      avg_glove = [np.mean(embeddings, axis = 0)]\n",
         "      # print(avg_glove.shape)\n",
-        "      cosine_similarities = [cosine_similarity(avg_glove, i)[0] for i in list_s]\n",
+        "      cosine_similarities = [cosine_similarity(avg_glove, i) for i in list_s]\n",
         "      max_cos = max(cosine_similarities)\n",
         "      for i in np.arange(len(cosine_similarities)):\n",
         "        if cosine_similarities[i] == max_cos:\n",
@@ -619,34 +619,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 309,
+      "execution_count": 325,
       "id": "b69452b2",
       "metadata": {
         "id": "b69452b2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5a1b2d8a-dd30-4461-8d6b-b9dc78f617b8"
+        "outputId": "97861c5e-0448-4ad5-e3a9-583f07ac41a0"
       },
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "0.9377348789927616\n",
-            "0.9236094789017139\n",
-            "0.9414516733375865\n",
-            "0.9176346857816758\n",
-            "0.8799032692506081\n",
-            "0.9222623745614409\n",
-            "0.9229939467069989\n",
-            "0.9388833806225856\n",
-            "0.9131408283596923\n",
-            "0.9302437155155446\n",
-            "0.9505836772559635\n",
-            "0.946468408832777\n"
-          ]
-        },
         {
           "output_type": "execute_result",
           "data": {
@@ -666,7 +648,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 309
+          "execution_count": 325
         }
       ],
       "source": [
@@ -697,7 +679,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 326,
       "id": "7d2b70a3",
       "metadata": {
         "id": "7d2b70a3"
@@ -723,19 +705,60 @@
         "    \n",
         "    \"\"\"\n",
         "\n",
-        "    # Your code\n",
-        "\n",
-        "    pass\n"
+        "    dic = {}\n",
+        "    list_s = []\n",
+        "    for synset in target_synsets:\n",
+        "      s_def = wn.synset(synset).definition()\n",
+        "      s_vector = sentence_model.encode(s_def)\n",
+        "      # print(s_vector.shape)\n",
+        "      # print(avg_syn)\n",
+        "      list_s.append(s_vector)\n",
+        "    \n",
+        "    for (word, definition) in urban_dictionary_terms:\n",
+        "      w_vector = sentence_model.encode(definition)\n",
+        "      cosine_similarities = [cosine_similarity(w_vector, i) for i in list_s]\n",
+        "      max_cos = max(cosine_similarities)\n",
+        "      for i in np.arange(len(cosine_similarities)):\n",
+        "        if cosine_similarities[i] == max_cos:\n",
+        "          index = i\n",
+        "          dic[word] = target_synsets[index]\n",
+        "    return dic\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 327,
       "id": "285b848a",
       "metadata": {
-        "id": "285b848a"
+        "id": "285b848a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "07c1be7b-dc74-4578-9136-e5226d327186"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'Amotivational': 'faineant.s.01',\n",
+              " 'Crowdfunding': 'fund-raise.v.01',\n",
+              " 'Hellacious': 'formidable.s.01',\n",
+              " 'Hygge': 'coziness.n.01',\n",
+              " 'Infodemic': 'spread.n.01',\n",
+              " 'NSFW': 'faineant.s.01',\n",
+              " 'Onboarding': 'orientation.n.06',\n",
+              " 'Rando': 'stranger.n.02',\n",
+              " 'TL;DR': 'kernel.n.03',\n",
+              " 'Truthiness': 'plausibility.n.01',\n",
+              " 'Unfriend': 'stranger.n.02',\n",
+              " 'biohacking': 'mutation.n.02'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 327
+        }
+      ],
       "source": [
         "method_two_results=method_two(urban_dictionary_terms, target_synsets)\n",
         "method_two_results"
