使用 Colaboratory 建立

--- a/HW6/HW6.ipynb
+++ b/HW6/HW6.ipynb
@@ -679,7 +679,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 326,
+      "execution_count": 330,
       "id": "7d2b70a3",
       "metadata": {
         "id": "7d2b70a3"
@@ -717,6 +717,7 @@
         "    for (word, definition) in urban_dictionary_terms:\n",
         "      w_vector = sentence_model.encode(definition)\n",
         "      cosine_similarities = [cosine_similarity(w_vector, i) for i in list_s]\n",
+        "      # print(cosine_similarities)\n",
         "      max_cos = max(cosine_similarities)\n",
         "      for i in np.arange(len(cosine_similarities)):\n",
         "        if cosine_similarities[i] == max_cos:\n",
@@ -727,14 +728,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 327,
+      "execution_count": 331,
       "id": "285b848a",
       "metadata": {
         "id": "285b848a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "07c1be7b-dc74-4578-9136-e5226d327186"
+        "outputId": "165e6144-606c-4304-ea61-1158dd9829f6"
       },
       "outputs": [
         {
@@ -756,7 +757,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 327
+          "execution_count": 331
         }
       ],
       "source": [
@@ -778,7 +779,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 335,
       "id": "938b9fcd",
       "metadata": {
         "id": "938b9fcd"
@@ -786,7 +787,14 @@
       "outputs": [],
       "source": [
         "def accuracy(prediction: Dict[str, str], truth: Dict[str, str]) -> float:\n",
-        "    pass"
+        "    num = len(prediction.keys())\n",
+        "    correct = 0\n",
+        "\n",
+        "    for word in prediction.keys(): \n",
+        "      if prediction[word] == truth[word]:\n",
+        "        correct += 1\n",
+        "\n",
+        "    return correct/num * 100"
       ]
     },
     {
