使用 Colaboratory 建立

--- a/HW6/HW6.ipynb
+++ b/HW6/HW6.ipynb
@@ -806,7 +806,18 @@
       },
       "outputs": [],
       "source": [
-        "truth = ..."
+        "truth = {'Crowdfunding': 'faineant.s.01',\n",
+        "         'Hygge': 'fund-raise.v.01',\n",
+        "         'biohacking': 'formidable.s.01',\n",
+        "         'TL;DR': 'coziness.n.01',\n",
+        "         'Hellacious': 'spread.n.01',\n",
+        "         'Unfriend': 'faineant.s.01',\n",
+        "         'Infodemic': 'orientation.n.06',\n",
+        "         'Onboarding': 'stranger.n.02',\n",
+        "         'Truthiness': 'kernel.n.03',\n",
+        "         'Amotivational': 'plausibility.n.01',\n",
+        "         'NSFW': 'stranger.n.02',\n",
+        "         'Rando': 'mutation.n.02'}"
       ]
     },
     {
