使用 Colaboratory 建立

--- a/HW6/HW6.ipynb
+++ b/HW6/HW6.ipynb
@@ -799,47 +799,71 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 336,
       "id": "766150ed",
       "metadata": {
         "id": "766150ed"
       },
       "outputs": [],
       "source": [
-        "truth = {'Crowdfunding': 'faineant.s.01',\n",
-        "         'Hygge': 'fund-raise.v.01',\n",
-        "         'biohacking': 'formidable.s.01',\n",
-        "         'TL;DR': 'coziness.n.01',\n",
-        "         'Hellacious': 'spread.n.01',\n",
-        "         'Unfriend': 'faineant.s.01',\n",
-        "         'Infodemic': 'orientation.n.06',\n",
-        "         'Onboarding': 'stranger.n.02',\n",
-        "         'Truthiness': 'kernel.n.03',\n",
-        "         'Amotivational': 'plausibility.n.01',\n",
-        "         'NSFW': 'stranger.n.02',\n",
-        "         'Rando': 'mutation.n.02'}"
+        "truth = {'Crowdfunding': 'fund-raise.v.01',\n",
+        "         'Hygge': 'coziness.n.01',\n",
+        "         'biohacking': 'mutation.n.02',\n",
+        "         'TL;DR': 'kernel.n.03',\n",
+        "         'Hellacious': 'formidable.s.01',\n",
+        "         'Unfriend': 'sever.v.01',\n",
+        "         'Infodemic': 'spread.n.01',\n",
+        "         'Onboarding': 'orientation_course.n.01',\n",
+        "         'Truthiness': 'plausibility.n.01',\n",
+        "         'Amotivational': 'faineant.s.01',\n",
+        "         'NSFW': 'inappropriate.a.01',\n",
+        "         'Rando': 'stranger.n.02'}"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 337,
       "id": "9ea46c6b",
       "metadata": {
-        "id": "9ea46c6b"
+        "id": "9ea46c6b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9d829803-94fe-4982-e19a-197729038a48"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "25.0\n"
+          ]
+        }
+      ],
       "source": [
         "print(accuracy(method_one_results, truth))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 338,
       "id": "c0135985",
       "metadata": {
-        "id": "c0135985"
+        "id": "c0135985",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "be9f2721-4297-4aad-d93e-1df9c67698be"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "75.0\n"
+          ]
+        }
+      ],
       "source": [
         "print(accuracy(method_two_results, truth))"
       ]
