使用 Colaboratory 建立

--- a/HW6/HW6.ipynb
+++ b/HW6/HW6.ipynb
@@ -813,7 +813,7 @@
         "         'Hellacious': 'formidable.s.01',\n",
         "         'Unfriend': 'sever.v.01',\n",
         "         'Infodemic': 'spread.n.01',\n",
-        "         'Onboarding': 'orientation_course.n.01',\n",
+        "         'Onboarding': 'orientation.n.06',\n",
         "         'Truthiness': 'plausibility.n.01',\n",
         "         'Amotivational': 'faineant.s.01',\n",
         "         'NSFW': 'inappropriate.a.01',\n",
